tests/valid/02_tipos.mini0
// Prueba de todos los tipos basicos

x: int
y: bool
z: char
s: string
arr: []int

fun main()
end