tests/invalid/07_asignacion_invalida.mini0
// Asignacion mal formada

fun main()
    x: int
    x = = 5
end